--- a/p8105_hw1_sg3889.md
+++ b/p8105_hw1_sg3889.md
@@ -1,3 +1,10 @@
 P8105 – Homework 1
 ================
 
+# Problem 1
+
+Load the `penguins` dataset.
+
+``` r
+data("penguins", package = "palmerpenguins")
+```
