finished with the short description of the dataset in Problem 1

--- a/p8105_hw1_sg3889.md
+++ b/p8105_hw1_sg3889.md
@@ -8,3 +8,49 @@ Load the `penguins` dataset.
 ``` r
 data("penguins", package = "palmerpenguins")
 ```
+
+Look at the dataset using `view()`.
+
+``` r
+View(penguins)
+```
+
+Look at a summarized version of the dataset using `summary()`.
+
+``` r
+summary(penguins)
+```
+
+    ##       species          island    bill_length_mm  bill_depth_mm  
+    ##  Adelie   :152   Biscoe   :168   Min.   :32.10   Min.   :13.10  
+    ##  Chinstrap: 68   Dream    :124   1st Qu.:39.23   1st Qu.:15.60  
+    ##  Gentoo   :124   Torgersen: 52   Median :44.45   Median :17.30  
+    ##                                  Mean   :43.92   Mean   :17.15  
+    ##                                  3rd Qu.:48.50   3rd Qu.:18.70  
+    ##                                  Max.   :59.60   Max.   :21.50  
+    ##                                  NA's   :2       NA's   :2      
+    ##  flipper_length_mm  body_mass_g       sex           year     
+    ##  Min.   :172.0     Min.   :2700   female:165   Min.   :2007  
+    ##  1st Qu.:190.0     1st Qu.:3550   male  :168   1st Qu.:2007  
+    ##  Median :197.0     Median :4050   NA's  : 11   Median :2008  
+    ##  Mean   :200.9     Mean   :4202                Mean   :2008  
+    ##  3rd Qu.:213.0     3rd Qu.:4750                3rd Qu.:2009  
+    ##  Max.   :231.0     Max.   :6300                Max.   :2009  
+    ##  NA's   :2         NA's   :2
+
+Discussion:
+
+-   The variables involved in the `penguins` dataset are **species**,
+    **island**, **bill_length_mm**, **bill_depth_mm**,
+    **flipper_length_mm**, **body_mass_g**, **sex**, and **year**. For a
+    brief summary of this dataset, there are 3 speicies of penguins,
+    including Adelie, Chinstrap, and Gentoo. The penguins come from 3
+    unique islands, including Biscoe, Dream, and Torgersen. The penguins
+    in this dataset have bill lengths ranging from 32.1mm to 59.6 mm,
+    bill depths ranging from 13.1 mm to 21.5 mm, flipper lengths ranging
+    from 172 mm to 231 mm, and body masses ranging from 2700 g to
+    6300 g. There are 165 female and 168 male penguins in the dataset,
+    and all of the penguins were born between 2007 and 2009.  
+-   The dataset has 344 rows and 8 columns.  
+-   The mean flipper length for the penguins in the dataset is 200.92
+    mm.
