--- a/p8105_hw1_sg3889.Rmd
+++ b/p8105_hw1_sg3889.Rmd
@@ -11,3 +11,20 @@ Load the `penguins` dataset.
 data("penguins", package = "palmerpenguins")
 ```
 
+Look at the dataset using `view()`.
+
+```{r, eval = FALSE}
+View(penguins)
+```
+
+Look at a summarized version of the dataset using `summary()`.
+
+```{r}
+summary(penguins)
+```
+
+Discussion:  
+
+*  The variables involved in the `penguins` dataset are **species**, **island**, **bill_length_mm**, **bill_depth_mm**, **flipper_length_mm**, **body_mass_g**, **sex**, and **year**. For a brief summary of this dataset, there are 3 speicies of penguins, including Adelie, Chinstrap, and Gentoo. The penguins come from 3 unique islands, including Biscoe, Dream, and Torgersen. The penguins in this dataset have bill lengths ranging from `r min(penguins$bill_length_mm, na.rm = TRUE) `mm to `r max(penguins$bill_length_mm, na.rm = TRUE)` mm, bill depths ranging from `r min(penguins$bill_depth_mm, na.rm = TRUE)` mm to `r max(penguins$bill_depth_mm, na.rm = TRUE)` mm, flipper lengths ranging from `r min(penguins$flipper_length_mm, na.rm = TRUE)` mm to `r max(penguins$flipper_length_mm, na.rm = TRUE)` mm, and body masses ranging from `r min(penguins$body_mass_g, na.rm = TRUE)` g to `r max(penguins$body_mass_g, na.rm = TRUE)` g. There are 165 female and 168 male penguins in the dataset, and all of the penguins were born between 2007 and 2009.  
+*  The dataset has `r nrow(penguins)` rows and `r ncol(penguins)` columns.  
+*  The mean flipper length for the penguins in the dataset is `r round(mean(penguins$flipper_length_mm, na.rm = TRUE), 2)` mm.
