--- a/p8105_hw1_sg3889.md
+++ b/p8105_hw1_sg3889.md
@@ -1,6 +1,10 @@
 P8105 – Homework 1
 ================
 
+``` r
+library(tidyverse)
+```
+
 # Problem 1
 
 Load the `penguins` dataset.
@@ -9,13 +13,15 @@ Load the `penguins` dataset.
 data("penguins", package = "palmerpenguins")
 ```
 
+## Brief Summary
+
 Look at the dataset using `view()`.
 
 ``` r
 View(penguins)
 ```
 
-Look at a summarized version of the dataset using `summary()`.
+Look at a brief summary of the dataset using `summary()`.
 
 ``` r
 summary(penguins)
@@ -54,3 +60,18 @@ Discussion:
 -   The dataset has 344 rows and 8 columns.  
 -   The mean flipper length for the penguins in the dataset is 200.92
     mm.
+
+## Scatterplot
+
+Now I will make a scatterplot of `flipper_length_mm` on y-axis and
+`bill_length_mm` on x-axis, with colored points by `species`.
+
+``` r
+ggplot(
+  penguins,
+  aes(x = bill_length_mm, y = flipper_length_mm, color = species)
+  ) +
+  geom_point()
+```
+
+![](p8105_hw1_sg3889_files/figure-gfm/scatterplot-1.png)<!-- -->
