exporting the scatterplot and uploading the pdf file of the plot

--- a/p8105_hw1_sg3889.Rmd
+++ b/p8105_hw1_sg3889.Rmd
@@ -47,3 +47,8 @@ ggplot(
   geom_point()
 ```
 
+Export the scatterplot to the working directory.
+
+```{r export, warning = FALSE}
+ggsave("scatterplot_flipper_bill_length_by_species.pdf", height = 4, width = 6)
+```
