--- a/p8105_hw1_sg3889.md
+++ b/p8105_hw1_sg3889.md
@@ -75,3 +75,9 @@ ggplot(
 ```
 
 ![](p8105_hw1_sg3889_files/figure-gfm/scatterplot-1.png)<!-- -->
+
+Export the scatterplot to the working directory.
+
+``` r
+ggsave("scatterplot_flipper_bill_length_by_species.pdf", height = 4, width = 6)
+```
