creating a data frame for Problem 2

--- a/p8105_hw1_sg3889.md
+++ b/p8105_hw1_sg3889.md
@@ -81,3 +81,17 @@ Export the scatterplot to the working directory.
 ``` r
 ggsave("scatterplot_flipper_bill_length_by_species.pdf", height = 4, width = 6)
 ```
+
+# Problem 2
+
+Create a data frame.
+
+``` r
+p2_df =
+  tibble(
+    var_norm = rnorm(n = 10),
+    var_logical = var_norm > 0,
+    var_character = c("alopecia", "anxiety", "asthma", "chills", "deafness", "fever", "headache", "infection", "nausea", "rash"),
+    var_factor = c("severe", "severe", "mild", "moderate", "mild", "severe", "moderate", "mild", "mild", "mild")
+  )
+```
