--- a/p8105_hw1_sg3889.md
+++ b/p8105_hw1_sg3889.md
@@ -13,7 +13,7 @@ Load the `penguins` dataset.
 data("penguins", package = "palmerpenguins")
 ```
 
-## Brief Summary
+## Brief summary
 
 Look at the dataset using `view()`.
 
@@ -49,14 +49,17 @@ Discussion:
 -   The variables involved in the `penguins` dataset are **species**,
     **island**, **bill_length_mm**, **bill_depth_mm**,
     **flipper_length_mm**, **body_mass_g**, **sex**, and **year**. For a
-    brief summary of this dataset, there are 3 speicies of penguins,
-    including Adelie, Chinstrap, and Gentoo. The penguins come from 3
-    unique islands, including Biscoe, Dream, and Torgersen. The penguins
-    in this dataset have bill lengths ranging from 32.1mm to 59.6 mm,
-    bill depths ranging from 13.1 mm to 21.5 mm, flipper lengths ranging
-    from 172 mm to 231 mm, and body masses ranging from 2700 g to
-    6300 g. There are 165 female and 168 male penguins in the dataset,
-    and all of the penguins were born between 2007 and 2009.  
+    brief summary of this dataset:
+    -   There are 3 speicies of penguins, including Adelie, Chinstrap,
+        and Gentoo.
+    -   The penguins come from 3 unique islands, including Biscoe,
+        Dream, and Torgersen.
+    -   The penguins in this dataset have bill lengths ranging from
+        32.1mm to 59.6 mm, bill depths ranging from 13.1 mm to 21.5 mm,
+        flipper lengths ranging from 172 mm to 231 mm, and body masses
+        ranging from 2700 g to 6300 g.
+    -   There are 165 female and 168 male penguins in the dataset.
+    -   All of the penguins were born between 2007 and 2009.  
 -   The dataset has 344 rows and 8 columns.  
 -   The mean flipper length for the penguins in the dataset is 200.92
     mm.
@@ -84,7 +87,7 @@ ggsave("scatterplot_flipper_bill_length_by_species.pdf", height = 4, width = 6)
 
 # Problem 2
 
-Create a data frame.
+## Create dataframe
 
 ``` r
 p2_df =
@@ -95,3 +98,52 @@ p2_df =
     var_factor = c("severe", "severe", "mild", "moderate", "mild", "severe", "moderate", "mild", "mild", "mild")
   )
 ```
+
+## Take the mean
+
+``` r
+mean(pull(p2_df, var_norm))
+```
+
+    ## [1] -0.3296871
+
+``` r
+mean(pull(p2_df, var_logical))
+```
+
+    ## [1] 0.5
+
+``` r
+mean(pull(p2_df, var_character))
+```
+
+    ## [1] NA
+
+``` r
+mean(pull(p2_df, var_factor))
+```
+
+    ## [1] NA
+
+Taking the mean of numeric (`var_norm`) and logical (`var_logical`)
+variables works, but when taking the mean of character (`var_character`)
+and factor (`var_factor`) variables, it does not work.
+
+## Convert variable type: to numeric
+
+I will achieve it by `as.numeric` function.
+
+``` r
+as.numeric(pull(p2_df, var_logical))
+as.numeric(pull(p2_df, var_character))
+as.numeric(pull(p2_df, var_factor))
+```
+
+I could successfully convert the logical variable into numeric. However,
+I failed to convert the character and factor into numeric. This happens
+because R can treat the logical “TRUE” and “FALSE”, as “1” and “0”,
+respectively, by default, but the character and factor cannot be treated
+as number (though factor can be re-coded by numbers to represent the
+“levels”).  
+As logical variable can be converted into numeric, character and factor
+cannot, it helps to explain what happens when trying to take the mean.
